fix(storage): preserve exact totals and insertion limits